# xv6-rust

./: .gitignore  Cargo.toml  Makefile  i386-xv6_rust.json  i686-xv6_rust.json  rust-toolchain.toml
.cargo/: config.toml
isodir/boot/grub/: grub.cfg
src/: Makefile  bootasm.S  bootmain.c  bootmain.rs  entry.S  kalloc.rs  kernel.rs  main.rs  vga_buffer.rs  vm.rs  x86.rs
