[package]
name = "xv6-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bootmain"
path = "src/bootmain.rs"
crate-type = ["staticlib"]

[[bin]]
name = "test"
path = "src/bootmain.rs"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = "z"

[dependencies]
