[package]
name = "xv6-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "kernel"
path = "src/kernel.rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = "z"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]